2001-07-05 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.c: Removed the "This is alpha software" message and
	  added the standard gpl/gnu software message

2001-07-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Make sure configure scripts work with autoconf-2.50
	  (had to fix cygwin check), they do not yet work with 2.50

	* Removed all trace of libtool from gnetlist, not required to build

2001-06-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/s_traverse.c: Added an if check so that buses are ignored
	  (once again).

2001-06-11 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.c: Oops forgot to call libgeda_init, added call

	* src/i_vars.c: Added code to prevent gnetlist dumping core if
	  the system-gnetlistrc file is not found
	
2001-06-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/g_rc.c: Changed g_rc_parse_system to use the GEDADATA 
	  environment variable

	* lib/system-gnetlistrc.in: Added support for GEDADATA
	
2001-03-18 Ales Hvezda   <ahvezda@geda.seul.org>

	* Removed all Makefile.in files and configure 

2001-03-17 Ales Hvezda   <ahvezda@geda.seul.org>
        
        * Got make dist and make distcheck working (means all files which are
          in CVS are in some Makefile)

	* configure.in, acconfig.h: unfortunately libgdgeda and stroke are
	  required for linking, so they MUST be inside these files

	* configure.in: Added DATADIR instead of PACKAGE

2001-03-06  Stefan Petersen  <spe@geda.seul.org>

	* configure.in, acconfig.h: In the spirit of yesterday I removed
	  every trace of stroke and libgdgeda.
	
2001-03-06  Stefan Petersen  <spe@geda.seul.org>

	* configure.in: Fixed typo and removed some hard coded libraries.
	  Patch and suggestion from Bruno Schwander.
	
2001-03-04  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-vhdl.scm: Integrate Thomas Heidel's VHDL bug fixes
	  (to generate better VHDL output)

	* configure.in: Updated version

	* configure.in: Added a check to make sure libgeda-config and 