@@ -4,7 +4,9 @@ scmdata_DATA = gnet-PCB.scm gnet-allegro.scm gnet-bom.scm gnet-geda.scm \
 	       gnet-spice.scm gnet-tango.scm gnet-verilog.scm \
 	       gnet-vhdl.scm gnet-vipec.scm gnet-PCBboard.scm \
                gnet-pads.scm gnetlist.scm gnet-bae.scm gnet-protelII.scm \
-               gnet-bom2.scm gnet-gossip.scm gnet-drc.scm gnet-vams.scm
+               gnet-bom2.scm gnet-gossip.scm gnet-drc.scm gnet-vams.scm \
+	       gnet-partslist-common.scm gnet-partslist1.scm \
+	       gnet-partslist2.scm gnet-partslist3.scm
 
 EXTRA_DIST = $(scmdata_DATA)
 
